--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "reset": "psql -U development -d resumerock < ./db/schema/create.sql && psql -U development -d resumerock < ./db/schema/seed.sql"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,7 +13,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.3.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
