--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-list-input": "^1.1.0",
     "react-scripts": "3.4.1",
     "react-star-rating-component": "^1.4.1",
     "react-stars": "^2.2.5"
