--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,13 @@
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-year-month-picker": "^1.0.1",
     "react-icons": "^3.10.0",
+    "react-scripts": "3.4.1",
     "react-star-rating-component": "^1.4.1",
-    "react-stars": "^2.2.5"
+    "react-stars": "^2.2.5",
+    "react-year-month-picker": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
