login registration authentication not working

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "reset": "psql -U development -d resumerock < ./db/schema/create.sql && psql -U development -d resumerock < ./db/schema/seed.sql"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.4.0",
     "debug": "~2.6.9",
