--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "react-year-month-picker": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
