--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "headroom.js": "^0.11.0",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -20,7 +21,8 @@
     "react-scripts": "3.4.1",
     "react-star-rating-component": "^1.4.1",
     "react-stars": "^2.2.5",
-    "react-year-month-picker": "^1.0.1"
+    "react-year-month-picker": "^1.0.1",
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "start": "PORT=3002 && react-scripts start",
