--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^5.3.19"
+    "@storybook/react": "^5.3.19",
+    "json-loader": "^0.5.7"
   }
 }
