--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8001",
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -22,6 +23,8 @@
     "react-scripts": "3.4.1",
     "react-star-rating-component": "^1.4.1",
     "react-stars": "^2.2.5",
+    "react-to-pdf": "0.0.11",
+    "react-to-print": "^2.9.0",
     "react-year-month-picker": "^1.0.1",
     "reactstrap": "^8.5.1"
   },
