--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pg": "^8.3.0"
+    "pg": "^8.3.0",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
