--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.0",
     "headroom.js": "^0.11.0",
     "js-file-download": "^0.4.12",
+    "lodash": "^4.17.19",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
