--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cookie": "^4.0.3",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
