--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^1.7.2",
     "bootstrap": "^4.5.0",
     "headroom.js": "^0.11.0",
     "js-file-download": "^0.4.12",
@@ -22,10 +22,10 @@
     "react-icons": "^3.10.0",
     "react-list-input": "^1.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "react-star-rating-component": "^1.4.1",
     "react-stars": "^2.2.5",
-    "react-to-pdf": "0.0.11",
+    "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.9.0",
     "react-year-month-picker": "^1.0.1",
     "reactstrap": "^8.5.1"
@@ -54,11 +54,11 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-actions": "^8.1.3",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^5.3.19",
+    "@storybook/react": "^8.1.3",
     "json-loader": "^0.5.7"
   }
 }
