--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,9 @@
     "reactstrap": "^8.5.1"
   },
   "scripts": {
-    "start": "PORT=3002 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env PORT=3002 react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
@@ -59,6 +59,15 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^8.1.3",
-    "json-loader": "^0.5.7"
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.3",
+    "json-loader": "^0.5.7",
+    "react-app-rewired": "^2.1.9",
+    "stream-browserify": "^3.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^3.11.3"
   }
 }
