--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "reset": "psql -U development -d resumerock < ./db/schema/create.sql && psql -U development -d resumerock < ./db/schema/seed.sql"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
