--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,19 @@ DB_PASS=development
 DB_NAME=resumerock
 DB_SSL=true if heroku
 DB_PORT=5432
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "api/index.js" },
+    {
+      "src": "/public/(.*)",
+      "dest": "/public/$1"
+    }
+  ]
+}
