--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.3.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
